Configure TCK to run SSL/Certificate tests
Signed-off-by: Arjan Tijms <arjan.tijms@omnifish.ee>